# task2

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
